[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "hubbleds"
authors = [{name = "CosmicDS Developers", email = "pudomprasert@cfa.harvard.edu"}]
license = {text = "MIT License"}
description = "CosmicDS Hubble Data Story"
readme = "README.md"
urls = {Homepage = "https://www.cosmicds.cfa.harvard.edu/"}
requires-python = ">=3.11"
dependencies = [
    "astropy",
    "cosmicds@git+https://github.com/cosmicds/cosmicds.git",
    "echo",
    "glue-core",
    "glue-jupyter",
    "glue-plotly>=0.7.2",
    "ipyvue",
    "ipyvuetify",
    "ipywidgets",
    "ipywwt@git+https://github.com/nmearl/ipywwt.git",
    "numpy",
    "pandas",
    "pydantic",
    "python-dateutil",
    "reacton",
    "solara",
    "traitlets",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "setuptools",
    "pytest",
    "pytest-cov",
]

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
